fix:   command工具线程池异常关闭的问题